compiler/src/test/resources/amyc/execution/passing/ShortCircuit.grading.amy
module ShortCircuit
  true || error("");
  false && error("")
end ShortCircuit
