compiler/src/test/resources/amyc/execution/failing/ShortCircuit.grading.amy
module ShortCircuit
  false || error("")
end ShortCircuit
